--- a/stats/statistics_task4.ipynb
+++ b/stats/statistics_task4.ipynb
@@ -4321,8 +4321,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "30fb9a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1      6.0\n",
+      "2      6.0\n",
+      "3      6.0\n",
+      "4      2.0\n",
+      "5      1.0\n",
+      "7      6.0\n",
+      "8      9.0\n",
+      "9      6.0\n",
+      "10     9.0\n",
+      "11     5.0\n",
+      "16     1.0\n",
+      "18     5.0\n",
+      "19     4.0\n",
+      "20     3.0\n",
+      "22     4.0\n",
+      "26     2.0\n",
+      "28     3.0\n",
+      "29     2.0\n",
+      "31     4.0\n",
+      "36     2.0\n",
+      "38     1.0\n",
+      "39     3.0\n",
+      "40     5.0\n",
+      "42     2.0\n",
+      "49     5.0\n",
+      "50     5.0\n",
+      "52     3.0\n",
+      "56     4.0\n",
+      "59     2.0\n",
+      "61     3.0\n",
+      "62     6.0\n",
+      "63     3.0\n",
+      "64     5.0\n",
+      "65     3.0\n",
+      "69     7.0\n",
+      "73     4.0\n",
+      "81     4.0\n",
+      "82     3.0\n",
+      "85     3.0\n",
+      "87     2.0\n",
+      "98     3.0\n",
+      "101    6.0\n",
+      "103    3.0\n",
+      "Name: age, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(female_age_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78f818d1",
    "metadata": {},
    "outputs": [],
    "source": []
