--- a/test.ipynb
+++ b/test.ipynb
@@ -1,16 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb1fc380",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"hell\")"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "language_info": {
    "name": "python"
