--- a/chi_square/chi_square.ipynb
+++ b/chi_square/chi_square.ipynb
@@ -186,6 +186,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffc66c5a",
+   "metadata": {},
+   "source": [
+    "```c\n",
+    "\n",
+    "Chi-Square Test for Independence\n",
+    "The Chi-Square Test for Independence is a statistical method used to determine whether there is a significant association between two categorical variables. It helps assess whether the distribution of one variable differs depending on the level of another variable. This test is widely applied in various fields, including market research, social sciences, and healthcare.\n",
+    "\n",
+    "Objective of the Chi-Square Test for Independence\n",
+    "The Chi-Square Test for Independence determines if two categorical variables are independent or associated.\n",
+    "\n",
+    "Null Hypothesis (H0): There is no association between the two variables, implying they are independent.\n",
+    "Alternative Hypothesis (H1): There is an association between the two variables, implying they are dependent.\n",
+    "Mathematical Formula\n",
+    "The Chi-Square statistic is calculated using the formula:\n",
+    "\n",
+    "\n",
+    "χ2 =∑(Oi −Ei)2 / Ei\n",
+    "\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "𝑂i is the observed frequency in the contingency table.\n",
+    "Ei is the expected frequency.\n",
+    "Assumptions of the Chi-Square Test\n",
+    "Categorical Variables: Both variables should be categorical.\n",
+    "Independence: The observations should be independent.\n",
+    "Sufficient Sample Size: The expected frequency in each cell should be at least 5 for the Chi-Square approximation to be valid.\n",
+    "Chi-Square Test for Independence in Python\n",
+    "Let’s implement a Chi-Square Test for Independence using Python. We will analyze whether gender and preference for a particular brand are independent.\n",
+    "\n",
+    "Python Code Implementation\n",
+    "\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import chi2_contingency\n",
+    "​\n",
+    "# Creating the contingency table\n",
+    "data = np.array([[25, 20, 15],   # Male preferences\n",
+    "                 [30, 10, 20]])  # Female preferences\n",
+    "​\n",
+    "# Converting to DataFrame for better visualization\n",
+    "df = pd.DataFrame(data, columns=['Prefer_A', 'Prefer_B', 'Prefer_C'], index=['Male', 'Female'])\n",
+    "​\n",
+    "print(\"Contingency Table:\")\n",
+    "print(df)\n",
+    "​\n",
+    "# Performing Chi-Square Test\n",
+    "chi2_stat, p_value, dof, expected = chi2_contingency(data)\n",
+    "​\n",
+    "# Displaying results\n",
+    "print(f\"\\nChi-Square Statistic: {chi2_stat:.4f}\")\n",
+    "print(f\"Degrees of Freedom: {dof}\")\n",
+    "print(\"Expected Frequencies Table:\\n\", expected)\n",
+    "print(f\"P-value: {p_value:.4f}\")\n",
+    "​\n",
+    "# Significance level\n",
+    "alpha = 0.05\n",
+    "​\n",
+    "# Decision\n",
+    "if p_value <= alpha:\n",
+    "    print(\"\\nReject Null Hypothesis: There is a significant association between gender and brand preference.\")\n",
+    "else:\n",
+    "    print(\"\\nFail to Reject Null Hypothesis: No significant association between gender and brand preference.\")\n",
+    "Output\n",
+    "\n",
+    "chi_sqaure_ind\n",
+    "Interpreting the Results\n",
+    "Chi-Square Statistic: The value χ2 = 4.5022 measures the difference between the observed and expected frequencies.\n",
+    "\n",
+    "Degrees of Freedom: The degrees of freedom for a contingency table are calculated as:\n",
+    "\n",
+    "dof = (number of rows − 1) × (number of columns − 1)\n",
+    "\n",
+    "In this case: dof = (2 − 1) × (3 − 1) = 2\n",
+    "\n",
+    "P-value: The p-value is 0.1053, which is greater than the significance threshold α = 0.05. As the p-value exceeds the threshold, we fail to reject the null hypothesis.\n",
+    "\n",
+    "When to Use Chi-Square Test for Independence?\n",
+    "When you need to check for associations between two categorical variables.\n",
+    "When analyzing survey responses or contingency tables.\n",
+    "Useful in fields like market research, sociology, and healthcare.\n",
+    "Limitations of the Chi-Square Test\n",
+    "Sample Size Dependency: The test can be unreliable if expected cell frequencies are too small.\n",
+    "Non-Causality: It only identifies associations, not causal relationships.\n",
+    "Categorical Limitation: Only applicable to categorical data.\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "10875cbe",
@@ -274,6 +367,204 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50792d12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We could try to use this test with all the categorical features present.\n",
+    "\n",
+    "chi2_check = []\n",
+    "for i in categorical_columns:\n",
+    "    if chi2_contingency(pd.crosstab(loan['Loan_Status'], loan[i]))[1] < 0.05:\n",
+    "        chi2_check.append('Reject Null Hypothesis')\n",
+    "    else:\n",
+    "        chi2_check.append('Fail to Reject Null Hypothesis')\n",
+    "res = pd.DataFrame(data = [categorical_columns, chi2_check] \n",
+    "             ).T \n",
+    "res.columns = ['Column', 'Hypothesis']\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b8258f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let’s try to do a post hoc test to the Property_Area feature. First, we need to do OneHotEncoding to the Property_Area feature.\n",
+    "\n",
+    "property_dummies = pd.get_dummies(data = loan[['Property_Area', 'Loan_Status']], columns = ['Property_Area'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f770675c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let create the cross-tab table for each of the Property_Area class against the target Loan_Status.\n",
+    "\n",
+    "pd.crosstab(property_dummies['Loan_Status'], property_dummies['Property_Area_Rural'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe21e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We then could do a Chi-Square test of independence to this pair.\n",
+    "# Bonferroni-adjusted method for correcting the p-value we use\n",
+    "check = {}\n",
+    "for i in res[res['Hypothesis'] == 'Reject Null Hypothesis']['Column']:\n",
+    "    dummies = pd.get_dummies(loan[i])\n",
+    "    bon_p_value = 0.05/loan[i].nunique()\n",
+    "    for series in dummies:\n",
+    "        if chi2_contingency(pd.crosstab(loan['Loan_Status'], dummies[series]))[1] < bon_p_value:\n",
+    "            check['{}-{}'.format(i, series)] = 'Reject Null Hypothesis'\n",
+    "        else:\n",
+    "            check['{}-{}'.format(i, series)] = 'Fail to Reject Null Hypothesis'\n",
+    "res_chi_ph = pd.DataFrame(data = [check.keys(), check.values()]).T\n",
+    "res_chi_ph.columns = ['Pair', 'Hypothesis']\n",
+    "res_chi_ph\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88cd48db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OneHotEncoding all the categorical variable except the target; Also drop_first = True to avoid multicollinearity for Logistic Regression\n",
+    "data_log = pd.get_dummies(data = loan, columns = loan.select_dtypes(exclude = 'number').drop('Loan_Status', axis =1).columns, drop_first =True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d91956da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Change the class into numerical value\n",
+    "data_log['Loan_Status'] = data_log['Loan_Status'].apply(lambda x: 0 if x == 'N' else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be72eedc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Splitting the data into Training and Test data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data_log.drop('Loan_Status', axis =1), data_log['Loan_Status'], test_size = 0.30, random_state = 101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "218e8477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating the prediction model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "log_model = LogisticRegression(max_iter = 1000)\n",
+    "log_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1af2c84b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Performance Check\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_curve,auc, accuracy_score\n",
+    "predictions = log_model.predict(X_test)\n",
+    "print(accuracy_score(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dee05ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cfe36ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating the ROC-AUC plot\n",
+    "preds = log_model.predict_proba(X_test)[:,1]\n",
+    "fpr, tpr, threshold = roc_curve(y_test, preds)\n",
+    "roc_auc = auc(fpr, tpr)\n",
+    "plt.figure(figsize=(10,8))\n",
+    "plt.title('Receiver Operator Characteristic')\n",
+    "plt.plot(fpr, tpr, 'b', label = 'AUC = {}'.format(round(roc_auc, 2)))\n",
+    "plt.legend(loc = 'lower right')\n",
+    "plt.plot([0,1], [0,1], 'r--')\n",
+    "plt.xlim([0,1])\n",
+    "plt.ylim([0,1])\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b75e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get the list of all the significant pairwise\n",
+    "significant_chi = []\n",
+    "for i in res_chi[res_chi['Hypothesis'] == 'Reject Null Hypothesis']['Pair']:\n",
+    "    significant_chi.append('{}_{}'.format(i.split('-')[0],i.split('-')[1]))\n",
+    "#Drop the data with duplicate information\n",
+    "for i in ['Married_No', 'Credit_History_0.0']:\n",
+    "    significant_chi.remove(i)\n",
+    "#Including the numerical data, as I have not analyze any of this feature\n",
+    "for i in loan.select_dtypes('number').columns:\n",
+    "    significant_chi.append(i)\n",
+    "print(significant_chi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dfd6cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Training the model only with the significant features and the numerical features\n",
+    "log_model = LogisticRegression(max_iter = 1000)\n",
+    "log_model.fit(X_train[significant_chi], y_train)\n",
+    "#Metrics check\n",
+    "predictions = log_model.predict(X_test[significant_chi])\n",
+    "print(accuracy_score(y_test, predictions))\n",
+    "print(classification_report(y_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107d2e59",
    "metadata": {},
    "outputs": [],
    "source": []
