--- a/crime_work/chicago_crime.ipynb
+++ b/crime_work/chicago_crime.ipynb
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "921262fb",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1881,7 @@
        "22      2023  87.951525  12.048475"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d1cb3985",
    "metadata": {},
    "outputs": [
@@ -2093,7 +2093,7 @@
        "22        2023  82.792033  17.207967"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "1634d944",
    "metadata": {},
    "outputs": [
@@ -2656,7 +2656,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2668,14 +2668,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "643ad732",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Primary Type\n",
+       "THEFT                                1499197\n",
+       "BATTERY                              1299859\n",
+       "CRIMINAL DAMAGE                       811905\n",
+       "NARCOTICS                             669097\n",
+       "ASSAULT                               465810\n",
+       "OTHER OFFENSE                         440288\n",
+       "BURGLARY                              390418\n",
+       "MOTOR VEHICLE THEFT                   339630\n",
+       "DECEPTIVE PRACTICE                    302833\n",
+       "ROBBERY                               267994\n",
+       "CRIMINAL TRESPASS                     195986\n",
+       "WEAPONS VIOLATION                     100385\n",
+       "PROSTITUTION                           61348\n",
+       "OFFENSE INVOLVING CHILDREN             49456\n",
+       "PUBLIC PEACE VIOLATION                 48705\n",
+       "SEX OFFENSE                            26311\n",
+       "CRIM SEXUAL ASSAULT                    24123\n",
+       "INTERFERENCE WITH PUBLIC OFFICER       17821\n",
+       "GAMBLING                               13405\n",
+       "LIQUOR LAW VIOLATION                   12782\n",
+       "HOMICIDE                               12168\n",
+       "ARSON                                  11863\n",
+       "KIDNAPPING                              6006\n",
+       "CRIMINAL SEXUAL ASSAULT                 5879\n",
+       "STALKING                                4431\n",
+       "INTIMIDATION                            4271\n",
+       "CONCEALED CARRY LICENSE VIOLATION       1072\n",
+       "OBSCENITY                                750\n",
+       "PUBLIC INDECENCY                         182\n",
+       "NON-CRIMINAL                             171\n",
+       "OTHER NARCOTIC VIOLATION                 136\n",
+       "HUMAN TRAFFICKING                         91\n",
+       "NON - CRIMINAL                            38\n",
+       "RITUALISM                                 15\n",
+       "NON-CRIMINAL (SUBJECT SPECIFIED)           9\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "primary_type_list = df['Primary Type'].value_counts()\n",
     "primary_type_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "978ca8ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th></th>\n",
+       "      <th>Ward</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2010.314079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2009.815869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2010.042464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2011.212585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2010.745191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2011.037438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2010.962207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2011.029974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2011.026153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2010.643763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2010.372226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2010.716723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2010.229764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2010.494894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2009.754553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2010.44564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2010.665221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2010.502593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>2010.506327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2010.388221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>2010.796296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>2010.917296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2010.043257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2011.016201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>2011.328253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>2010.106867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>2010.991799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>2010.823645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>2010.787459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2010.192555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2010.338258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2010.123774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>33.0</td>\n",
+       "      <td>2010.551071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2010.531996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2010.145251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2010.802498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>2010.680176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>2010.328857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>2010.811499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2010.82286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>2011.140028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2011.780717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2010.652781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>2011.195353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>2010.828425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>46.0</td>\n",
+       "      <td>2010.587426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>2010.471809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>2010.665413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2010.68448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2010.885879</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Ward  Year       \n",
+       "0    1.0  2010.314079\n",
+       "1    2.0  2009.815869\n",
+       "2    3.0  2010.042464\n",
+       "3    4.0  2011.212585\n",
+       "4    5.0  2010.745191\n",
+       "5    6.0  2011.037438\n",
+       "6    7.0  2010.962207\n",
+       "7    8.0  2011.029974\n",
+       "8    9.0  2011.026153\n",
+       "9   10.0  2010.643763\n",
+       "10  11.0  2010.372226\n",
+       "11  12.0  2010.716723\n",
+       "12  13.0  2010.229764\n",
+       "13  14.0  2010.494894\n",
+       "14  15.0  2009.754553\n",
+       "15  16.0   2010.44564\n",
+       "16  17.0  2010.665221\n",
+       "17  18.0  2010.502593\n",
+       "18  19.0  2010.506327\n",
+       "19  20.0  2010.388221\n",
+       "20  21.0  2010.796296\n",
+       "21  22.0  2010.917296\n",
+       "22  23.0  2010.043257\n",
+       "23  24.0  2011.016201\n",
+       "24  25.0  2011.328253\n",
+       "25  26.0  2010.106867\n",
+       "26  27.0  2010.991799\n",
+       "27  28.0  2010.823645\n",
+       "28  29.0  2010.787459\n",
+       "29  30.0  2010.192555\n",
+       "30  31.0  2010.338258\n",
+       "31  32.0  2010.123774\n",
+       "32  33.0  2010.551071\n",
+       "33  34.0  2010.531996\n",
+       "34  35.0  2010.145251\n",
+       "35  36.0  2010.802498\n",
+       "36  37.0  2010.680176\n",
+       "37  38.0  2010.328857\n",
+       "38  39.0  2010.811499\n",
+       "39  40.0   2010.82286\n",
+       "40  41.0  2011.140028\n",
+       "41  42.0  2011.780717\n",
+       "42  43.0  2010.652781\n",
+       "43  44.0  2011.195353\n",
+       "44  45.0  2010.828425\n",
+       "45  46.0  2010.587426\n",
+       "46  47.0  2010.471809\n",
+       "47  48.0  2010.665413\n",
+       "48  49.0   2010.68448\n",
+       "49  50.0  2010.885879"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trend_ward = df.groupby(\"Ward\")[\"Year\"].mean().reset_index()\n",
+    "trend_ward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e7d053c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
